어드민 / 서비스 시간 설정 1차 배포

--- a/service_a/cup10702.html
+++ b/service_a/cup10702.html
@@ -248,7 +248,7 @@
 										<dl class="inpItem">
 											<dt id="cup10702_suggestedTariff">Suggested Tariff</dt>
 											<dd>
-												<!-- 2019-01-30 수정 -->
+												<!-- 2019-01-31 수정 -->
 												<div class="comboBox">
 													<select class="comboSelect" id="cup10702_suggestedTariff" placeholder="Select a Tariff">
 														<option value="">Select a Type</option>
@@ -258,7 +258,7 @@
 														<option value="Zebra T-Shoot">Zebra T-Shoot</option>
 													</select>
 												</div>
-												<!--// 2019-01-30 수정 -->
+												<!--// 2019-01-31 수정 -->
 											</dd>
 										</dl>
 									</li>
@@ -298,114 +298,92 @@
 								<dl class="inpItem2">
 									<dt id="cup10702_createdOnLb">Created on</dt>
 									<dd>
-										<!-- 2019-01-30 수정 -->
+										<!-- 2019-01-31 수정 -->
 										<div class="ele">
 											<div class="inputBox Edit_date single">
 												<input type="text" name="cup10702_createDate" class="inp Readonly" id="cup10702_createDate" value="12-14-2018" readonly />
 											</div>
-											<div class="timeSelect">
-												<div class="txt"></div>
-												<div class="tsDropBox">
-													<div class="ui selection dropdown">
-														<input type="hidden" name="hour">
-														<i class="dropdown icon"></i>
-														<div class="default text"></div>
-														<div class="menu">
-															<div class="item" data-value="1">1</div>
-															<div class="item" data-value="2">2</div>
-															<div class="item" data-value="3">3</div>
-															<div class="item" data-value="4">4</div>
-															<div class="item" data-value="5">5</div>
-															<div class="item" data-value="6">6</div>
-															<div class="item" data-value="7">7</div>
-															<div class="item" data-value="8">8</div>
-															<div class="item" data-value="9">9</div>
-															<div class="item" data-value="10">10</div>
-															<div class="item" data-value="11">11</div>
-															<div class="item" data-value="12">12</div>
-														</div>
-													</div>
-													<div class="ui selection dropdown">
-														<input type="hidden" name="minute">
-														<i class="dropdown icon"></i>
-														<div class="default text"></div>
-														<div class="menu">
-															<div class="item" data-value="1">1</div>
-															<div class="item" data-value="2">2</div>
-															<div class="item" data-value="3">3</div>
-															<div class="item" data-value="4">4</div>
-															<div class="item" data-value="5">5</div>
-															<div class="item" data-value="6">6</div>
-															<div class="item" data-value="7">7</div>
-															<div class="item" data-value="8">8</div>
-															<div class="item" data-value="9">9</div>
-															<div class="item" data-value="10">10</div>
-															<div class="item" data-value="11">11</div>
-															<div class="item" data-value="12">12</div>
-															<div class="item" data-value="13">13</div>
-															<div class="item" data-value="14">14</div>
-															<div class="item" data-value="15">15</div>
-															<div class="item" data-value="16">16</div>
-															<div class="item" data-value="17">17</div>
-															<div class="item" data-value="18">18</div>
-															<div class="item" data-value="19">19</div>
-															<div class="item" data-value="20">20</div>
-															<div class="item" data-value="21">21</div>
-															<div class="item" data-value="22">22</div>
-															<div class="item" data-value="23">23</div>
-															<div class="item" data-value="24">24</div>
-															<div class="item" data-value="25">25</div>
-															<div class="item" data-value="26">26</div>
-															<div class="item" data-value="27">27</div>
-															<div class="item" data-value="28">28</div>
-															<div class="item" data-value="29">29</div>
-															<div class="item" data-value="30">30</div>
-															<div class="item" data-value="31">31</div>
-															<div class="item" data-value="32">32</div>
-															<div class="item" data-value="33">33</div>
-															<div class="item" data-value="34">34</div>
-															<div class="item" data-value="35">35</div>
-															<div class="item" data-value="36">36</div>
-															<div class="item" data-value="37">37</div>
-															<div class="item" data-value="38">38</div>
-															<div class="item" data-value="39">39</div>
-															<div class="item" data-value="40">40</div>
-															<div class="item" data-value="41">41</div>
-															<div class="item" data-value="42">42</div>
-															<div class="item" data-value="43">43</div>
-															<div class="item" data-value="44">44</div>
-															<div class="item" data-value="45">45</div>
-															<div class="item" data-value="46">46</div>
-															<div class="item" data-value="47">47</div>
-															<div class="item" data-value="48">48</div>
-															<div class="item" data-value="49">49</div>
-															<div class="item" data-value="50">50</div>
-															<div class="item" data-value="51">51</div>
-															<div class="item" data-value="52">52</div>
-															<div class="item" data-value="53">53</div>
-															<div class="item" data-value="54">54</div>
-															<div class="item" data-value="55">55</div>
-															<div class="item" data-value="56">56</div>
-															<div class="item" data-value="57">57</div>
-															<div class="item" data-value="58">58</div>
-															<div class="item" data-value="59">59</div>
-															<div class="item" data-value="60">60</div>
-														</div>
-													</div>
-													<div class="ui selection dropdown">
-														<input type="hidden" name="ampm">
-														<i class="dropdown icon"></i>
-														<div class="default text"></div>
-														<div class="menu">
-															<div class="item" data-value="AM">AM</div>
-															<div class="item" data-value="PM">PM</div>
-														</div>
-													</div>
-													<button class="btn" onclick="tsChk(this)">Ok</button>
-													<button class="btn" onclick="tsClose(this)">Cancel</button>
-												</div>
-
+											<div class="inputBox Edit_Time">
+												<input type="text" name="cup10702_createTime" class="inp quantity" id="cup10702_createTime" placeholder="-- : --" maxlength="4">
+												<button class="inpReset"></button>
 											</div>
+
+
+											<style type="text/css">
+												.fixa {
+													position: fixed;
+													top: 100px;
+													left: 100px;
+													border: 1px solid blue;
+													min-width: 200px;
+													height: 100px;
+													text-align: center;
+													background: #fff;
+													font-size: 14px;
+												}
+											</style>
+
+
+											<script type="text/javascript">
+												$(function() {
+													$(".quantity").keypress(function(e) {
+														quantityVal = $(this).val();
+														if (quantityVal.length > 4) {
+															$(this).val('');
+														}
+														if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
+															return false;
+														}
+													});
+
+													$('.quantity').unbind('focusout').focusout(function() {
+														quantityVal = $(this).val();
+														if (quantityVal.length < 5 && !quantityVal == '') {
+															var timeHour = quantityVal.substring(0, 2);
+															var timeMinute = quantityVal.substring(2, 4);
+															Time = this;
+															if (timeHour > 11) {
+																ampm = 'PM'
+															} else {
+																ampm = 'AM'
+															}
+
+															///Hour
+															if (timeHour.length == 1) {
+																timeHour = '0' + timeHour;
+															}
+
+															// Minute
+															if (timeMinute.length == 1) {
+																timeMinute = timeMinute + '0'
+															} else if (timeMinute.length == 0) {
+																timeMinute = '00';
+															}
+															$(Time).val(timeHour + ' : ' + timeMinute + ' ' + ampm);
+
+															if (timeHour > 23) {
+																alert('Please enter a correct value! - Hour: Between 0 ~ 23');
+																$(Time).val('');
+																$(this).closest('.inputBox').find('.inpReset').hide();
+																return false;
+															}
+															if (timeMinute > 59) {
+																alert('Please enter a correct value! - Minute: Between 0 ~ 59');
+																$(Time).val('');
+																$(this).closest('.inputBox').find('.inpReset').hide();
+																return false;
+															}
+														}
+
+													});
+
+
+
+												});
+											</script>
+
+
+											<div class="fixa"></div>
 										</div>
 										<div class="ele">
 											<div class="inputBox Edit_User">
@@ -414,121 +392,99 @@
 												<button class="inpReset"></button>
 											</div>
 										</div>
-										<!--// 2019-01-30 수정 -->
+										<!--// 2019-01-31 수정 -->
 									</dd>
 								</dl>
 
 								<dl class="inpItem2">
 									<dt id="cup10702_modifiedOnLb">Modified on</dt>
 									<dd>
-										<!-- 2019-01-30 수정 -->
+										<!-- 2019-01-31 수정 -->
 										<div class="ele">
 											<div class="inputBox Edit_date single">
 												<input type="text" name="cup10702_modifiedDate" class="inp Readonly" id="cup10702_modifiedDate" value="12-14-2018" readonly />
 											</div>
-											<div class="timeSelect">
-												<div class="txt"></div>
-												<div class="tsDropBox">
-													<div class="ui selection dropdown">
-														<input type="hidden" name="hour">
-														<i class="dropdown icon"></i>
-														<div class="default text"></div>
-														<div class="menu">
-															<div class="item" data-value="1">1</div>
-															<div class="item" data-value="2">2</div>
-															<div class="item" data-value="3">3</div>
-															<div class="item" data-value="4">4</div>
-															<div class="item" data-value="5">5</div>
-															<div class="item" data-value="6">6</div>
-															<div class="item" data-value="7">7</div>
-															<div class="item" data-value="8">8</div>
-															<div class="item" data-value="9">9</div>
-															<div class="item" data-value="10">10</div>
-															<div class="item" data-value="11">11</div>
-															<div class="item" data-value="12">12</div>
-														</div>
-													</div>
-													<div class="ui selection dropdown">
-														<input type="hidden" name="minute">
-														<i class="dropdown icon"></i>
-														<div class="default text"></div>
-														<div class="menu">
-															<div class="item" data-value="1">1</div>
-															<div class="item" data-value="2">2</div>
-															<div class="item" data-value="3">3</div>
-															<div class="item" data-value="4">4</div>
-															<div class="item" data-value="5">5</div>
-															<div class="item" data-value="6">6</div>
-															<div class="item" data-value="7">7</div>
-															<div class="item" data-value="8">8</div>
-															<div class="item" data-value="9">9</div>
-															<div class="item" data-value="10">10</div>
-															<div class="item" data-value="11">11</div>
-															<div class="item" data-value="12">12</div>
-															<div class="item" data-value="13">13</div>
-															<div class="item" data-value="14">14</div>
-															<div class="item" data-value="15">15</div>
-															<div class="item" data-value="16">16</div>
-															<div class="item" data-value="17">17</div>
-															<div class="item" data-value="18">18</div>
-															<div class="item" data-value="19">19</div>
-															<div class="item" data-value="20">20</div>
-															<div class="item" data-value="21">21</div>
-															<div class="item" data-value="22">22</div>
-															<div class="item" data-value="23">23</div>
-															<div class="item" data-value="24">24</div>
-															<div class="item" data-value="25">25</div>
-															<div class="item" data-value="26">26</div>
-															<div class="item" data-value="27">27</div>
-															<div class="item" data-value="28">28</div>
-															<div class="item" data-value="29">29</div>
-															<div class="item" data-value="30">30</div>
-															<div class="item" data-value="31">31</div>
-															<div class="item" data-value="32">32</div>
-															<div class="item" data-value="33">33</div>
-															<div class="item" data-value="34">34</div>
-															<div class="item" data-value="35">35</div>
-															<div class="item" data-value="36">36</div>
-															<div class="item" data-value="37">37</div>
-															<div class="item" data-value="38">38</div>
-															<div class="item" data-value="39">39</div>
-															<div class="item" data-value="40">40</div>
-															<div class="item" data-value="41">41</div>
-															<div class="item" data-value="42">42</div>
-															<div class="item" data-value="43">43</div>
-															<div class="item" data-value="44">44</div>
-															<div class="item" data-value="45">45</div>
-															<div class="item" data-value="46">46</div>
-															<div class="item" data-value="47">47</div>
-															<div class="item" data-value="48">48</div>
-															<div class="item" data-value="49">49</div>
-															<div class="item" data-value="50">50</div>
-															<div class="item" data-value="51">51</div>
-															<div class="item" data-value="52">52</div>
-															<div class="item" data-value="53">53</div>
-															<div class="item" data-value="54">54</div>
-															<div class="item" data-value="55">55</div>
-															<div class="item" data-value="56">56</div>
-															<div class="item" data-value="57">57</div>
-															<div class="item" data-value="58">58</div>
-															<div class="item" data-value="59">59</div>
-															<div class="item" data-value="60">60</div>
-														</div>
-													</div>
-													<div class="ui selection dropdown">
-														<input type="hidden" name="ampm">
-														<i class="dropdown icon"></i>
-														<div class="default text"></div>
-														<div class="menu">
-															<div class="item" data-value="AM">AM</div>
-															<div class="item" data-value="PM">PM</div>
-														</div>
-													</div>
-													<button class="btn" onclick="tsChk(this)">Ok</button>
-													<button class="btn" onclick="tsClose(this)">Cancel</button>
-												</div>
-
+											<div class="inputBox Edit_Time">
+												<input type="text" name="cup10702_modifiedTime" class="inp quantity" id="cup10702_modifiedTime" placeholder="-- : --" maxlength="4">
+												<button class="inpReset"></button>
 											</div>
+
+
+											<style type="text/css">
+												.fixa {
+													position: fixed;
+													top: 100px;
+													left: 100px;
+													border: 1px solid blue;
+													min-width: 200px;
+													height: 100px;
+													text-align: center;
+													background: #fff;
+													font-size: 14px;
+												}
+											</style>
+
+
+											<script type="text/javascript">
+												$(function() {
+													$(".quantity").keypress(function(e) {
+														quantityVal = $(this).val();
+														if (quantityVal.length > 4) {
+															$(this).val('');
+														}
+														if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
+															return false;
+														}
+													});
+
+													$('.quantity').unbind('focusout').focusout(function() {
+														quantityVal = $(this).val();
+														if (quantityVal.length < 5 && !quantityVal == '') {
+															var timeHour = quantityVal.substring(0, 2);
+															var timeMinute = quantityVal.substring(2, 4);
+															Time = this;
+															if (timeHour > 11) {
+																ampm = 'PM'
+															} else {
+																ampm = 'AM'
+															}
+
+															///Hour
+															if (timeHour.length == 1) {
+																timeHour = '0' + timeHour;
+															}
+
+															// Minute
+															if (timeMinute.length == 1) {
+																timeMinute = timeMinute + '0'
+															} else if (timeMinute.length == 0) {
+																timeMinute = '00';
+															}
+															$(Time).val(timeHour + ' : ' + timeMinute + ' ' + ampm);
+
+															if (timeHour > 23) {
+																alert('Please enter a correct value! - Hour: Between 0 ~ 23');
+																$(Time).val('');
+																$(this).closest('.inputBox').find('.inpReset').hide();
+																return false;
+															}
+															if (timeMinute > 59) {
+																alert('Please enter a correct value! - Minute: Between 0 ~ 59');
+																$(Time).val('');
+																$(this).closest('.inputBox').find('.inpReset').hide();
+																return false;
+															}
+														}
+
+													});
+
+
+
+												});
+											</script>
+
+
+											<div class="fixa"></div>
 										</div>
 										<div class="ele">
 											<div class="inputBox Edit_User">
@@ -537,7 +493,7 @@
 												<button class="inpReset"></button>
 											</div>
 										</div>
-										<!--// 2019-01-30 수정 -->
+										<!--// 2019-01-31 수정 -->
 									</dd>
 								</dl>
 
