관리자 / 서비스 페이지 수정

--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -139,7 +139,7 @@
 
 	<h2>input타입 - Edit_User</h2>
 	<div class="inputBox Edit_User">
-		<img src="../static/images/common/icon/icon_person.png" alt="" class="thumb" />
+		<img src="../static/images/common/icon/icon_person_small.png" alt="" class="thumb" />
 		<input type="text" name="" class="inp" id="">
 		<button class="inpReset"></button>
 	</div>
@@ -147,9 +147,43 @@
 	<div class="box">
 		<pre class="brush: html;">
 			<div class="inputBox Edit_User">
-				<img src="" alt="" class="thumb" />
+				<img src="../static/images/common/icon/icon_person_small.png" alt="" class="thumb" />
 				<input type="text" name="" class="inp" id="">
 				<button class="inpReset"></button>
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+	<h2>input타입 - Edit_Time</h2>
+	<div class="inputBox Edit_Time">
+		<input type="text" name="cup10702_modifiedTime" class="inp quantity" id="cup10702_modifiedTime" placeholder="-- : --" maxlength="4">
+		<button class="inpReset"></button>
+		<div class="alertMessage time" style="margin-top:10px; display:none;"></div>
+	</div>
+
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox Edit_Time">
+	<input type="text" name="" class="inp quantity" id="" placeholder="-- : --" maxlength="4">
+	<button class="inpReset"></button>
+	<div class="alertMessage time" style="margin-top:10px; display:none;"></div>
+</div>
+
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+	<h2>input타입 - Edit_Time Readonly</h2>
+	<div class="inputBox Edit_Time readonly">
+		<input type="text" name="cup10702_modifiedTime" class="inp Readonly" id="cup10702_modifiedTime" value="10 : 20 AM" readonly="readonly">
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox Edit_Time readonly">
+				<input type="text" name="cup10702_modifiedTime" class="inp Readonly" id="cup10702_modifiedTime" value="10 : 20 AM" readonly="readonly">
 			</div>
 		</pre>
 	</div>
